--- a/SWD_GUI_Assignment/Views/AddLokationWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddLokationWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SWD_GUI_Assignment"
         xmlns:se="clr-namespace:SWD_GUI_Assignment.Services"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
-        Title="{Binding Path=WindowTitle}" Height="450" Width="300"
+        Title="{Binding Path=WindowTitle}" Height="576.054" Width="300"
         se:DialogCloser.DialogResult="{Binding DialogResult}" ShowInTaskbar="False" FocusManager.FocusedElement="{Binding ElementName=TextBoxName}" WindowStartupLocation="CenterOwner">
     <Window.Resources>
         <Style TargetType="{x:Type TextBox}">
@@ -47,25 +48,48 @@
         <Label Name="LabelName" Content="Navn" Grid.Row="0" Grid.Column="0"></Label>
         <TextBox Name="TextBoxName"  VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" Padding="3">
             <TextBox.Text>
-                <Binding Path="Model.Navn">
+                <Binding Path="Lokation.Navn">
                     <Binding.ValidationRules>
                         <ExceptionValidationRule />
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <Label Name="LabelTelefonNr" Content="Vej" Grid.Row="2" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxTelefonNr" Text="{Binding Path=Model.TelefonNr, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelKommentar" Content="Kommentar" Grid.Row="4" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxKommentar" Text="{Binding Path=Model.Kommentarer, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelAdresse" Content="Adresse" Grid.Row="6" Grid.Column="0"></Label>
-        <TextBox Name="TextAdresse" Text="{Binding Path=Model.Adresse, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="7" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelHøjde" Content="Vejnummer" Grid.Row="8" Grid.Column="0"></Label>
-        <TextBox Name="TextHøjde" Text="{Binding Path=Model.Højde, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="9" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelVægt" Content="Postnummer" Grid.Row="10" Grid.Column="0"></Label>
-        <TextBox Name="TextVægt" Text="{Binding Path=Model.Vægt, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="11" Grid.Column="0" Padding="3"></TextBox>
-        <Label Name="LabelHårfarve" Content="By" Grid.Row="12" Grid.Column="0"></Label>
-        <TextBox Name="TextHårfarve" Text="{Binding Path=Model.Hårfarve, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="13" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelVej" Content="Vej" Grid.Row="2" Grid.Column="0"></Label>
+        <TextBox Name="TextBoxVej" Text="{Binding Path=Lokation.Vej, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelVejnummer" Content="Vejnummer" Grid.Row="4" Grid.Column="0"></Label>
+        <TextBox Name="TextVejnummer" Text="{Binding Path=Lokation.Vejnummer, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelPostnummer" Content="Postnummer" Grid.Row="6" Grid.Column="0"></Label>
+        <TextBox Name="TextPostnummer" Text="{Binding Path=Lokation.Postnummer, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="7" Grid.Column="0" Padding="3"></TextBox>
+        <Label Name="LabelBy" Content="By" Grid.Row="8" Grid.Column="0"></Label>
+        <TextBox Name="TextBy" Text="{Binding Path=Lokation.By, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="9" Grid.Column="0" Padding="3"></TextBox>
+        
+        <Button Name="btnAddTree" Content="Add Tree" Command="{Binding Path=AddTreeCommand}" Margin="0 5 0 5" Padding="5 3" Grid.Row="10"></Button>
+        <ListView IsSynchronizedWithCurrentItem="True" MinHeight="200" x:Name="ListViewDebtors" ItemsSource="{Binding Path=Lokation.MeasurementTrees}"
+                  SelectedItem="{Binding Path=MeasurementTree}" Margin="5" Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Art}">
+                            <GridViewColumnHeader Content="Art"  MinWidth="200"></GridViewColumnHeader>
+                        </GridViewColumn>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=Antal}">
+                            <GridViewColumnHeader Content="Antal"  MinWidth="75"></GridViewColumnHeader>
+                        </GridViewColumn>
+                    </GridView.Columns>
+
+                </GridView>
+            </ListView.View>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding EditDebtorCommand}" CommandParameter="{Binding ElementName=ListViewDebtors, Path=SelectedItem}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+
+        </ListView>
+
+
         <StackPanel Orientation="Horizontal" Grid.Row="14" Grid.Column="0" Margin="0 10 0 0">
             <Button Content="OK" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=SaveCommand}" Margin="0 0 30 0"/>
             <Button Content="Cancel" HorizontalAlignment="Left" Command="{Binding Path=CloseCommand}"  MinWidth="75"/>
