--- a/SWD_GUI_Assignment/Views/MainWindow.xaml
+++ b/SWD_GUI_Assignment/Views/MainWindow.xaml
@@ -72,6 +72,7 @@
             <Button Name="btnAddDebtor" Content="Add Lokation" Command="{Binding Path=AddDebtorCommand}" Margin="0 0 0 5" Padding="5 3"></Button>
             
             <Button Name="SaveButton" Content="Save to file" Command="{Binding Path=SaveFile}" Margin="5 0 0 5" Padding="5 3"></Button>
+            <Button Name="OpenButton" Content="Open file" Command="{Binding Path=OpenFile}" Margin="5 0 0 5" Padding="5 3"></Button>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" Margin="0,5,5,5" HorizontalAlignment="Right">
             <TextBlock Text="FilterBy: " Margin="0 3 0 0"></TextBlock>
