--- a/SWD_GUI_Assignment/Views/AddTreeWindow.xaml
+++ b/SWD_GUI_Assignment/Views/AddTreeWindow.xaml
@@ -34,9 +34,25 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Name="LabelArt" Content="Art" Grid.Row="2" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxArt" Text="{Binding Path=MeasurementTree.Art, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextBoxArt"  VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" Padding="3">
+            <TextBox.Text>
+                <Binding Path="MeasurementTree.Art">
+                    <Binding.ValidationRules>
+                        <ExceptionValidationRule />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <Label Name="LabelAntal" Content="Antal" Grid.Row="4" Grid.Column="0"></Label>
-        <TextBox Name="TextBoxAntal" Text="{Binding Path=MeasurementTree.Antal, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3"></TextBox>
+        <TextBox Name="TextBoxAntal" VerticalContentAlignment="Center" Grid.Row="5" Grid.Column="0" Padding="3">
+            <TextBox.Text>
+                    <Binding Path="MeasurementTree.Antal">
+                        <Binding.ValidationRules>
+                        <ExceptionValidationRule />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <StackPanel Orientation="Horizontal" Grid.Row="14" Grid.Column="0" Margin="0 10 0 0">
             <Button IsDefault="true" Content="Ok" HorizontalAlignment="Left" MinWidth="75" Command="{Binding Path=ConfirmCommand}" Margin="0 0 30 0"/>
             <Button IsCancel="true" Content="Cancel" HorizontalAlignment="Left" MinWidth="75"/>
