--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
             </div>
         }
 
-        @using (Html.BeginForm("Upload", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
         {
         @Html.AntiForgeryToken()
             <form method="post" enctype="multipart/form-data">
