--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -22,9 +22,13 @@
 
         <div id="vueApp">
             <div>
-                <b-table striped hover :fields="['Id','Navn','Vej','Vejnummer','By', 'Postnummer']" :items="lokations"></b-table>
+                <b-table :filter="filter" striped hover :fields="['Id','Navn','Vej','Vejnummer','By', 'Postnummer']" :items="lokations"></b-table>
             </div>
+            <label>Filter by</label>
+            <input v-model="filter" type="text" id="FilterLokation"/>
         </div>
+        
+
 
         @if (Request.IsAuthenticated)
         {
