--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -80,5 +80,5 @@
     </div>
 </div>
 @section Scripts {
-    <script src="~/js/index2.js"></script>
+    <script src="~/js/lokations.js"></script>
 }
